--- a/index.html
+++ b/index.html
@@ -21,5 +21,14 @@
   <body class="bg-stone-100 text-stone-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <script>
+      window.googletag = window.googletag || {cmd: []};
+      googletag.cmd.push(function() {
+        googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [MISSING_WIDTH, MISSING_HEIGHT], 'div-gpt-ad-1714374640142-0').addService(googletag.pubads());
+        googletag.pubads().enableSingleRequest();
+        googletag.enableServices();
+      });
+    </script>
   </body>
 </html>
