shift adtag to header

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script>
       window.googletag = window.googletag || {cmd: []};
       googletag.cmd.push(function() {
-        googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [MISSING_WIDTH, MISSING_HEIGHT], 'div-gpt-ad-1714374640142-0').addService(googletag.pubads());
+        googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [320, 50], 'div-gpt-ad-1714374640142-0').addService(googletag.pubads());
         googletag.pubads().enableSingleRequest();
         googletag.enableServices();
       });
