shift adtag to header

--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
     />
 
     <title>Fast React Pizza Co.</title>
-    <script>
-      window.googletag = window.googletag || {cmd: []};
-      googletag.cmd.push(function() {
-        googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [320, 50], 'div-gpt-ad-1714374640142-0').addService(googletag.pubads());
-        googletag.pubads().enableSingleRequest();
-        googletag.enableServices();
-      });
-    </script>
+    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script>
+  window.googletag = window.googletag || {cmd: []};
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [[300, 50], [320, 50]], 'div-gpt-ad-1714380059238-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
+</script>
   </head>
   <body class="bg-stone-100 text-stone-700">
     <div id="root"></div>
