--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
 
     <title>Fast React Pizza Co.</title>
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script>
+<!-- <script>
   window.googletag = window.googletag || {cmd: []};
   googletag.cmd.push(function() {
     googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [[300, 50], [320, 50]], 'div-gpt-ad-1714380059238-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
+</script> -->
+<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+<script>
+  window.googletag = window.googletag || {cmd: []};
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [[300, 50], [930, 180], [480, 320], [320, 50]], 'div-gpt-ad-1714380444823-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
