--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
 
     <title>Fast React Pizza Co.</title>
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<!-- <script>
+<script>
   window.googletag = window.googletag || {cmd: []};
   googletag.cmd.push(function() {
     googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [[300, 50], [320, 50]], 'div-gpt-ad-1714380059238-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
-</script> -->
+</script>
 <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script>
+<!-- <script>
   window.googletag = window.googletag || {cmd: []};
   googletag.cmd.push(function() {
     googletag.defineSlot('/23043175892/fast-react-pizza/bannertest', [[300, 50], [930, 180], [480, 320], [320, 50]], 'div-gpt-ad-1714380444823-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
-</script>
+</script> -->
 
   </head>
   <body class="bg-stone-100 text-stone-700">
@@ -42,10 +42,10 @@
     <script type="module" src="/src/main.jsx"></script>
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <!-- /23043175892/fast-react-pizza/bannertest -->
-<div id='div-gpt-ad-1714380059238-0' style='min-width: 300px; min-height: 50px;'>
+<!-- <div id='div-gpt-ad-1714380059238-0' style='min-width: 300px; min-height: 50px;'>
   <script>
     googletag.cmd.push(function() { googletag.display('div-gpt-ad-1714380059238-0'); });
   </script>
-</div>
+</div> -->
   </body>
 </html>
