--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
 
     <title>Fast React Pizza Co.</title>
-    <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+    <!-- <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 <script>
   window.googletag = window.googletag || {cmd: []};
   googletag.cmd.push(function() {
@@ -25,8 +25,8 @@
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
-</script>
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+</script> -->
+<!-- <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script> -->
 <!-- <script>
   window.googletag = window.googletag || {cmd: []};
   googletag.cmd.push(function() {
@@ -36,15 +36,27 @@
   });
 </script> -->
 
+  <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
+  <script>
+    window.googletag = window.googletag || {cmd: []};
+    googletag.cmd.push(function() {
+      googletag.defineSlot('/23043175892/P9qhbl/com_org_AmarUjala_news/P9qhbl_ANW_37_BAN_250_300_1', [300, 250], 'div-gpt-ad-1714391105800-0').addService(googletag.pubads());
+      googletag.pubads().enableSingleRequest();
+      googletag.enableServices();
+    });
+  </script>
+
   </head>
   <body class="bg-stone-100 text-stone-700">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- pizza banner - div-gpt-ad-1714380059238-0 -->
+    
     <script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
     <!-- /23043175892/fast-react-pizza/bannertest -->
-    <div id='div-gpt-ad-1714380059238-0' style='min-width: 320px; min-height: 50px;'>
+    <div id='div-gpt-ad-1714391105800-0' style='min-width: 320px; min-height: 50px;'>
       <script>
-        googletag.cmd.push(function() { googletag.display('div-gpt-ad-1714380059238-0'); });
+        googletag.cmd.push(function() { googletag.display('div-gpt-ad-1714391105800-0'); });
       </script>
     </div>
   </body>
